# slimstreamer

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
cmake/: FindFLAC.cmake
dependencies/: CMakeLists.txt
make/: .gitignore  Makefile  SlimStreamer
scripts/: compile  createLocalBranches.sh  updateSubmodules.sh
src/: SlimStreamer.cpp
src/slim/: Chunk.cpp  Chunk.hpp  Consumer.hpp  Container.hpp  ContainerBase.hpp  Demultiplexor.hpp  EncoderBase.hpp  EncoderBuilder.hpp  Exception.cpp  Exception.hpp  ExceptionBase.hpp  FileConsumer.hpp  Multiplexor.hpp  Pipeline.hpp  Producer.hpp  RealTimeQueue.hpp  Scheduler.hpp  ScopeGuard.hpp  ScopeGuardBase.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  StreamWriter.hpp  Streamer.cpp  Streamer.hpp  SyncPoint.hpp  SyncStreamWriter.hpp
src/slim/alsa/: Exception.hpp  Parameters.hpp  Source.cpp  Source.hpp
src/slim/conn/: Callbacks.hpp  CallbacksBase.hpp  Connection.hpp  DiscoveryServer.hpp  Server.hpp  TCPServer.hpp  UDPCallbacks.hpp  UDPCallbacksBase.hpp  UDPServer.hpp
src/slim/conn/tcp/: Callbacks.hpp  CallbacksBase.hpp  Connection.hpp  Server.hpp
src/slim/conn/udp/: Callbacks.hpp  CallbacksBase.hpp  Server.hpp
src/slim/flac/: Encoder.hpp  File.hpp  Stream.hpp
src/slim/log/: ConsoleSink.cpp  ConsoleSink.hpp  SinkFilter.cpp  SinkFilter.hpp  log.hpp
src/slim/proto/: Command.hpp  CommandAUDE.hpp  CommandAUDG.hpp  CommandHELO.hpp  CommandRESP.hpp  CommandSETD.hpp  CommandSTAT.hpp  CommandSTRM.hpp  CommandSession.hpp  Destination.hpp  InboundCommand.hpp  OutboundCommand.hpp  Session.hpp  Streamer.hpp  StreamingSession.hpp
src/slim/proto/client/: CommandDSCO.hpp  CommandHELO.hpp  CommandRESP.hpp  CommandSETD.hpp  CommandSTAT.hpp
src/slim/proto/server/: CommandAUDE.hpp  CommandAUDG.hpp  CommandSETD.hpp  CommandSTRM.hpp
src/slim/util/: ArrayCache.hpp  AsyncWriter.hpp  BigInteger.hpp  Buffer.hpp  BufferedAsyncWriter.hpp  BufferedWriter.hpp  Duration.hpp  ExpandableBuffer.hpp  OutputStreamCallback.hpp  RealTimeQueue.hpp  RingBuffer.hpp  ScopeGuard.hpp  ScopeGuardBase.hpp  StateMachine.hpp  StreamAsyncWriter.hpp  StreamBufferWithCallback.hpp  StreamWriter.hpp  Timestamp.hpp  TimestampCache.hpp  Writer.hpp
src/slim/util/buffer/: Array.hpp  ArrayBuffer.hpp  BufferPool.hpp  HeapBuffer.hpp  Helper.hpp  RawBuffer.hpp  Ring.hpp  RingBuffer.hpp  Storage.hpp
src/slim/wave/: Destination.cpp  Destination.hpp  Encoder.hpp  File.hpp  Stream.hpp  WAVEFile.cpp  WAVEFile.hpp  WAVEStream.cpp  WAVEStream.hpp
test/: CMakeLists.txt  Exception.cpp  ExceptionBase.cpp  Mocks.hpp  SlimStreamerTest.cpp  main.cpp
test/slim/proto/: StreamingSessionTest.cpp  StreamingSessionTest.hpp
test/slim/util/buffer/: ArrayBufferTest.cpp  ArrayBufferTest.hpp  ArrayTest.cpp  ArrayTest.hpp  BufferPoolTest.cpp  BufferPoolTest.hpp  HeapBufferTest.cpp  HeapBufferTest.hpp  HelperTest.cpp  RingBufferTest.cpp  RingBufferTest.hpp  RingTest.cpp  RingTest.hpp
